Add Endpoints for Medicine, and setup cron job to reset usedToday, and extend Reminder daily
